made moveemnt worse
broke bullets